--- a/Text/sections/section1.tex
+++ b/Text/sections/section1.tex
@@ -159,7 +159,7 @@ $$v, w \in \mathscr{N}, \exists i \in 1..s :\ c_{P_i}(v) \ne c_{P_i}(w) \Rightar
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection[Одновременно возмущаемая стохастическая аппроксимация (SPSA)]{Одновременно возмущаемая\\ стохастическая аппроксимация (SPSA)}
+\subsection[Одновременно возмущаемая стохастическая аппроксимация (SPSA)]{Одновременно возмущаемая стохастическая\\ аппроксимация (SPSA)}
 Стохастическая аппроксимация была введена Роббинсом и Монро в 1951 году \cite{Robbins&Monro:1951} и затем была использована для решения оптимизационный задач Кифером и Вольфовицем \cite{Kiefer&Wolfowitz:1952}. В \cite{Blum:1954} алгоритм стохастической аппроксимации был расширен до многомерного случая. В $m$-мерном пространстве обычная KW-процедура, основанная на конечно-разностной аппроксимации градиента, использовала $2m$ измерений на каждой итерации (по два измерения на каждую координату градиента). Последовательно Граничин \cite{Граничин:1989}, Поляк и Цыбаков \cite{Поляк&Цыбаков:1990} и Спалл \cite{Spall:1992} предложили алгоритм \emph{одновременно возмущаемой стохастической аппроксимации} (\emph{SPSA}), который на каждой итерации использует всего два измерения. Алгоритм \emph{SPSA} имеет такую же скорость сходимости, несмотря на то, что в многомерном случае (даже при $m \to \infty$) в нём используется заметно меньше измерений \cite{Spall:2005}.
 
 Стохастическая аппроксимация первоначально использовалась как инструмент для статистических вычислений и в дальнейшем разрабатывалась в рамках отдельной ветки теории управления. На сегодняшний день стохастическая аппроксимация имеет большое разнообразие применений в таких областях, как адаптивная обработка сигналов, адаптивное выделение ресурсов, адаптивное управление.
