--- a/Text/sections/section3.I.tex
+++ b/Text/sections/section3.I.tex
@@ -52,7 +52,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Адаптивное построение промежуточного разбиения}
+\subsection[Адаптивное построение промежуточного разбиения (ACGGC)]{Адаптивное построение промежуточного\\ разбиения (ACGGC)}
 \label{subsec:es-adaptive}
 
 Так как адаптивный рандомизированный жадный алгоритм не может работать на графах с маленьким количеством узлов или на разбиениях с маленьким количеством сообществ --- была предложена другая схема адаптивной кластеризации основных групп графа:
@@ -81,7 +81,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Размер возмущения и чувствительность к перепадам функции качества}
+\subsection[Размер возмущения и чувствительность к перепадам функции качества]{Размер возмущения и чувствительность к перепадам\\ функции качества}
 
 Функцией качества для построения промежуточного разбиения выбрана $f(Q, k) = -\alpha(\ln Q - \beta \ln k)$. Мотивация этого выбора аналогична выбору функции качества для $ARG$, описанная в подразделе \ref{subsec:arg-f}. Аналогично, параметр $\alpha$ указывает на чувствительность алгоритма к разностям значений функции качества, а параметр $\beta$ указывает на значимость времени работы алгоритма.
 
