--- a/Presentation/ps/p2.tex
+++ b/Presentation/ps/p2.tex
@@ -1,4 +1,67 @@
 \begin{frame}
-	\frametitle{Адаптивная схема кластеризации основных групп графа}
+	\frametitle{Сравнение \emph{CGGC} и \emph{ACGGC}}
+	\scriptsize
+	\begin{table}[H]
+		\caption{Модулярность разбиений, полученных \emph{ACGGC} и \emph{CGGC} на тестовых графах}
+		\begin{tabularx}{\textwidth}{lrrrrr} \hline
+					& $ACGGC^{I}$ & $ACGGC^{II}$ & $CGGC_{10}^{10}$	& $CGGC_{3}^{10}$ & $CGGC_{10}^{3}$ \\ \hline
+		karate 			& \csilver 0.417242 	& \cgold 0.417406 	& 0.415598 	& 0.396532	& 0.405243	\\
+		dolphins		& \cgold{0.524109}	& \csilver{0.523338}	& 0.521399	& 0.523338	& 0.522428	\\
+		chesapeake		& \csilver{0.262439}	& \csilver{0.262439}	& \csilver{0.262439}	& \csilver{0.262439}	& 0.262370	\\
+		adjnoun			& \cgold{0.299704}	& \csilver{0.299197}	& 0.295015	& 0.292703	& 0.290638	\\
+		polbooks		& \csilver{0.527237}	& \csilver{0.527237}	& \csilver{0.527237}	& 0.526938	& 0.526784	\\
+		football		& 0.603324	& \csilver{0.604266}	& \csilver{0.604266}	& 0.599537	& 0.599026	\\
+		celegans 		& \cgold{0.439604}	& \csilver{0.438584} 	& 0.435819	& 0.436066	& 0.432261	\\
+		jazz			& 0.444739	& \csilver{0.444848}	& \cgold{0.444871} 	& 0.444206 	& 0.444206	\\
+		netscience		& \cgold{0.907229}	& \csilver{0.835267}	& \cred 0.724015 	& \cred 0.708812 	& \cred 0.331957	\\
+		email			& \csilver{0.573333}	& \cgold{0.573409}	& 0.571018 	& 0.572667 	& 0.567423	\\
+		polblogs		& \cgold{0.424107} 	& \csilver{0.423208}	& 0.422901 	& 0.421361 	& 0.390395	\\
+		pgpGiantCompo	& \cgold{0.883115} 	& \csilver{0.883085}	& 0.882237 	& 0.882532	& 0.880340	\\
+		as-22july06		& \cgold{0.671249}	& \csilver{0.670677}	& 0.666766	& 0.669847	& 0.665260	\\
+		cond-mat-2003	& 0.744533 	& \csilver{0.750367}	& \cgold{0.751109} 	& \cred 0.708775	& \cred 0.413719	\\
+		caidaRouterLevel& 0.846312	& \csilver{0.855651}	& 0.851622 	& \cgold{0.858955} 	& 0.843835	\\
+		cnr-2000		& 0.912762 	& \cgold{0.912783}	& 0.912500 	& \csilver{0.912777}	& 0.912496	\\
+		eu-2005			& \cgold{0.938292}  & \csilver{0.936984}	& 0.935510 	& 0.936515	& 0.936420	\\
+		in-2004			& \csilver{0.979844}	& 0.979771	& \cgold{0.979883}	& 			& 			\\
+		\hline
+		\end{tabularx}
+	\end{table}
+\end{frame}
 
+\begin{frame}
+	\frametitle{Сравнение \emph{CGGCi} и \emph{ACGGCi}}
+	\begin{table}[H]
+	\caption{Модулярность работы четырёх итеративных алгоритмов на небольших тестовых графах}
+	\begin{tabularx}{\textwidth}{Xrrrr} \hline
+					& $ACGGCi^{I}$ & $ACGGCi^{II}$ & $CGGCi$	& combined \\ \hline
+	karate			& 0.417242	& \cgold{0.417406}	& 0.417242	& 0.417242	\\
+	dolphins		& 0.525869	& 0.525869	& 0.525869	& 0.525869	\\
+	chesapeake		& 0.262439	& 0.262439	& 0.262439	& 0.262439	\\
+	adjnoun			& 0.303731	& 0.303504	& 0.303571	& \cgold{0.303970}	\\
+	polbooks		& 0.527237	& 0.527237	& 0.527237	& 0.527237	\\
+	football		& 0.604266	& 0.604407	& \cgold{0.604429}	& 0.604407	\\
+	celegans 		& 0.446964	& 0.446836	& 0.445442	& \cgold{0.447234}	\\
+	jazz			& 0.444871	& 0.444871	& 0.444871	& 0.444871	\\
+	netscience		& \cgold{0.908845}	& 0.888422	& \cred 0.725781	& 0.907443	\\
+	email			& 0.576778	& 0.577000	& 0.576749	& \cgold{0.577110}	\\
+	polblogs		& \cgold{0.424025}	& 0.422920	& 0.423281	& 0.423996	\\
+	\hline
+	\end{tabularx}
+\end{table}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Заключение}
+
+	В рамках работы
+	\begin{itemize}
+		\item Проанализированы современные методы выделения сообществ
+		\item Предложен алгоритм $ARG$, дающий более стабильные результаты, чем $RG$
+		\item Описано возможное применение $ARG$
+		\item Представлены схемы $ACGGC$ и $ACGGCi$, дающая в среднем лучшие и более стабильные результаты, чем $CGGC$ и $CGGCi$
+		\item Описан механизм снижения времени работы $ACGGC$
+	\end{itemize}
+
+	\vspace{2em}\centeringВопросы?
 \end{frame}
