--- a/Presentation/ps/p1.tex
+++ b/Presentation/ps/p1.tex
@@ -117,8 +117,8 @@
 	\begin{enumerate}
 		\item Вычисляются аргументы функционала\\
 		$k_{n}^{-} \leftarrow \max\{\hat{k}_{n - 1} - d, 1\}$ и $k_{n}^{+} \leftarrow \hat{k}_{n - 1} + d$
-		\item Выполняется $\sigma$ итераций $RG_k$ с параметром $k = k_{n}^{-}$, медиана прироста модулярности $\mu_n^{-}$
-		\item Выполняется $\sigma$ итераций $RG_k$ с параметром $k = k_{n}^{+}$, медиана прироста модулярности $\mu_n^{+}$
+		\item Выполняется $\sigma$ итераций $RG_k$ с параметром $k = k_{n}^{-}$, медиана прироста модулярности равна $\mu_n^{-}$
+		\item Выполняется $\sigma$ итераций $RG_k$ с параметром $k = k_{n}^{+}$, медиана прироста модулярности равна $\mu_n^{+}$
 		\item Вычисляются значения функционала\\
 		$y_n^{-} \leftarrow -\alpha (\ln \mu_n^{-} - \beta \ln k_n^{-}),\ y_n^{+} \leftarrow -\alpha (\ln \mu_n^{+} - \beta \ln k_n^{+})$
 		\item Подсчитывается следующая оценка
@@ -323,7 +323,7 @@
 
 
 \begin{frame}
-	\frametitle{Параметры CGGC}
+	\frametitle{Параметры \emph{CGGC}}
 
 	\begin{multicols}{2}
 
