--- a/Presentation/ps/p2.tex
+++ b/Presentation/ps/p2.tex
@@ -59,7 +59,7 @@
 		\item Проанализированы современные методы выделения сообществ
 		\item Предложен алгоритм $ARG$, дающий более стабильные результаты, чем $RG$
 		\item Описано возможное применение $ARG$
-		\item Представлены схемы $ACGGC$ и $ACGGCi$, дающая в среднем лучшие и более стабильные результаты, чем $CGGC$ и $CGGCi$
+		\item Представлены схемы $ACGGC$ и $ACGGCi$, показывающие более хорошие и стабильные результаты, чем $CGGC$ и $CGGCi$
 		\item Описан механизм снижения времени работы $ACGGC$
 	\end{itemize}
 
