--- a/Presentation/presentation.tex
+++ b/Presentation/presentation.tex
@@ -81,6 +81,9 @@
 }
 
 \subject{Beamer}
+
+% \bibliographystyle{supershortnotecite}
+
 \begin{document}
 
 \begin{frame}
@@ -89,6 +92,5 @@
 
 \input{ps/p1}
 \input{ps/p2}
-
 
 \end{document}
